--- a/rei.cabal
+++ b/rei.cabal
@@ -2,9 +2,9 @@
 -- see http://haskell.org/cabal/users-guide/
 
 name:                rei
-version:             0.2.0.0
+version:             0.2.1.0
 synopsis:            Process lists easily
-description:         A tool built for processing lists easily
+description:         A tool for processing lists easily
 homepage:            https://github.com/kerkomen/rei
 license:             MIT
 license-file:        LICENSE
