--- a/rei.cabal
+++ b/rei.cabal
@@ -20,6 +20,6 @@ executable rei
   main-is:             Main.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.7 && <4.8, attoparsec, regex-posix, bytestring, directory, containers, split
+  build-depends:       base >=4.7 && <4.8, attoparsec, regex-tdfa, bytestring, directory, containers, split
   -- hs-source-dirs:      
   default-language:    Haskell2010
