--- a/rei.cabal
+++ b/rei.cabal
@@ -2,7 +2,7 @@
 -- see http://haskell.org/cabal/users-guide/
 
 name:                rei
-version:             0.3.4.1
+version:             0.3.5
 synopsis:            Process lists easily
 description:         A tool for processing lists easily
 homepage:            https://github.com/kerkomen/rei
@@ -20,6 +20,7 @@ executable rei
   main-is:             Main.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.7 && <4.8, attoparsec, regex-tdfa, bytestring, directory, containers, split
+  build-depends:       base >=4.7, attoparsec, regex-tdfa, bytestring, directory, containers, split
   -- hs-source-dirs:      
   default-language:    Haskell2010
+  ghc-options:         -fno-warn-tabs
