Fix build error due to the version of `base` package

--- a/rei.cabal
+++ b/rei.cabal
@@ -20,7 +20,7 @@ executable rei
   main-is:             Main.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.7 && <4.9, attoparsec, regex-tdfa, bytestring, directory, containers, split
+  build-depends:       base >=4.7 && <=4.9, attoparsec, regex-tdfa, bytestring, directory, containers, split
   -- hs-source-dirs:      
   default-language:    Haskell2010
   ghc-options:         -fno-warn-tabs
